--- a/locoh.html
+++ b/locoh.html
@@ -24,7 +24,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="奢侈人生 Luxury Life | 頂級名錶復刻與客製化">
+    <meta name="twitter:title" content="奢2侈人生 Luxury Life | 頂級名錶復刻與客製化">
     <meta name="twitter:description" content="以7年淬鍊的專業，演繹時間的藝術。提供勞力士、百達翡麗等頂級腕錶服務。">
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1523170335258-f5ed11844a49?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80">
 
