--- a/locoh.html
+++ b/locoh.html
@@ -7,7 +7,8 @@
     <!-- ==========================================
          SEO Meta Tags (搜尋引擎優化)
     =========================================== -->
-    <title>奢侈人生 Luxury Life | 頂級名錶復刻與客製化專家 - 勞力士、百達翡麗</title>
+    <title>奢侈人生 1
+        Luxury Life | 頂級名錶復刻與客製化專家 - 勞力士、百達翡麗</title>
     <meta name="description" content="奢侈人生 (Luxury Life) 專營頂級名錶復刻與客製化服務，擁有7年經驗與4間實體據點。提供勞力士 (Rolex)、百達翡麗 (Patek Philippe)、愛彼 (AP) 等世界名錶的專業諮詢、鑲鑽客製與完善售後保固。">
     <meta name="keywords" content="勞力士, Rolex, 百達翡麗, Patek Philippe, 名錶復刻, 手錶客製化, 奢侈人生, Luxury Life, 水鬼, 迪通拿, 鑲鑽手錶, Richard Mille, 沛納海">
     <meta name="author" content="奢侈人生 Luxury Life">
